--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "lint-staged": {
     "src/**/*.{vue,js,jsx,ts,tsx,json}": [
-      "yarn run lint",
+      "pnpm run lint",
       "prettier --write"
     ]
   }
