--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
     "lint": "eslint src --fix --ext .ts,.tsx,.vue,.js,.jsx --max-warnings 0"
   },
   "dependencies": {
-    "vue": "^3.3.11"
+    "@types/nprogress": "^0.2.3",
+    "axios": "^1.6.5",
+    "js-cookie": "^3.0.5",
+    "nprogress": "^0.2.0",
+    "pinia": "^2.1.7",
+    "vue": "^3.3.11",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@commitlint/cli": "17.6.1",
@@ -26,6 +32,7 @@
     "husky": "^8.0.3",
     "lint-staged": "13.2.1",
     "prettier": "^3.1.1",
+    "sass": "^1.69.7",
     "typescript": "^5.2.2",
     "vite": "^5.0.8",
     "vue-tsc": "^1.8.25"
